# confidential-safety

./: Cargo.toml  README.md  policy.toml
Plans/: groovy-humming-nest.md  quiet-prancing-puddle.md
crates/agent/: Cargo.toml
crates/agent/src/: action_validator.rs  capability.rs  lib.rs  session.rs  trajectory.rs
crates/classifier/: Cargo.toml
crates/classifier/src/: ensemble.rs  lib.rs  pattern.rs  verified_model.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  pipeline.rs  policy.rs  verdict.rs
crates/inference/: Cargo.toml
crates/inference/src/: input_gate.rs  lib.rs  middleware.rs  output_gate.rs
crates/provider/: Cargo.toml
crates/provider/src/: config.rs  error.rs  lib.rs
crates/provider/src/providers/: chutes.rs  maple.rs  mock.rs  mod.rs  nanogpt.rs  near.rs  openai_compat.rs  privatemode.rs  redpill.rs  tinfoil.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  routes.rs
crates/tee/: Cargo.toml
crates/tee/src/: attestation.rs  audit_log.rs  disclosure.rs  lib.rs  signing.rs  verification.rs
docker/: Dockerfile.agent  Dockerfile.base  Dockerfile.inference
spec/: behavior.md  evals.md
