[package]
name = "confidential-safety-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
confidential-safety-core = { workspace = true }
confidential-safety-classifier = { workspace = true }
confidential-safety-tee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
