[package]
name = "confidential-safety-classifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
confidential-safety-core = { workspace = true }
confidential-safety-tee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
aho-corasick = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
confidential-safety-tee = { workspace = true }
axum = { workspace = true }
tempfile = { workspace = true }
