[package]
name = "confidential-safety-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
confidential-safety-core = { workspace = true }
confidential-safety-classifier = { workspace = true }
confidential-safety-inference = { workspace = true }
confidential-safety-agent = { workspace = true }
confidential-safety-tee = { workspace = true }
confidential-safety-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
