[package]
name = "confidential-safety-tee"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
confidential-safety-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
